--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <script src="https://kit.fontawesome.com/14ae188149.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/14ae188149.js" crossorigin="anonymous"></script>`
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
